# duckdb-substrait-extension

.github/workflows/: python_tests.yml
scripts/: generate_custom_functions.py
src/: custom_extensions.cpp  custom_extensions_generated.cpp  from_substrait.cpp  substrait_extension.cpp  to_substrait.cpp
src/include/: to_substrait.hpp
src/include/custom_extensions/: custom_extensions.hpp
test/c/: CMakeLists.txt  test_empty_table_optimizer_folding.cpp  test_projection.cpp  test_root_names.cpp  test_substrait_c_api.cpp
test/python/: README.md  test_named_table_resolution.py  test_schema_mismatch_crash.py
test/sql/: test_groupby_having_order.test  test_no_projection_crash.test  test_schema_mismatch_crash.test  test_substrait_enable_optimizer.test
